--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>UsageLens</title>
   </head>
   <body>
+    pppjnjk
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
